<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weatherforcast.ui.weather.CurrentWeatherFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="latLon"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.weatherforcast.ui.alarm.AlarmFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/settings"
        android:name="com.example.weatherforcast.ui.settings.Settings"
        android:label="@string/title_Setting" >
    </fragment>
    <fragment
        android:id="@+id/locationListFragment"
        android:name="com.example.weatherforcast.ui.locationlist.LocationListFragment"
        android:label="location_list_fragment"
        tools:layout="@layout/location_list_fragment" >
        <action
            android:id="@+id/action_fav_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <!--        android:name="com.example.weatherforcast.ui.settings.NotificationsFragment"-->

</navigation>