<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:orientation="horizontal"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:cardMaxElevation="2dp"
        app:cardBackgroundColor="@color/ppColor"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/daily_date_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="10sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    tools:text="Today"
                    android:textColor="@color/light_grey"
                    android:layout_gravity="center_vertical" />
                <TextView
                    android:id="@+id/daily_decription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:layout_marginLeft="15dp"
                    tools:text="Cloudy"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical" />
                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/temp"
                            android:textColor="@color/light_grey"
                            android:textSize="10sp" />
                        <TextView
                            android:id="@+id/textView_temp_daily"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="20"/>

                    </LinearLayout>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/light_grey" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="vertical"
                       >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/wind"
                            android:textColor="@color/light_grey"
                            android:textSize="10sp" />
                        <TextView
                            android:id="@+id/textView_wind_daily"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="20"/>

                    </LinearLayout>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/light_grey" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/humidity"
                            android:textColor="@color/light_grey"
                            android:textSize="10sp" />
                        <TextView
                            android:id="@+id/textView_humidity_daily"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="20"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/light_grey"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/pressure"
                            android:textColor="@color/light_grey"
                            android:textSize="10sp" />
                        <TextView
                            android:id="@+id/textView_pressure_daily"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="20"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/light_grey" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:weightSum="2"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/cloud"
                            android:textColor="@color/light_grey"
                            android:textSize="10sp" />
                        <TextView
                            android:id="@+id/textView_cloud_daily"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="20"/>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/daily_weather_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy"
               android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
