<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.weather.CurrentWeatherFragment"
    android:orientation="vertical">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     android:paddingLeft="20dp"
     android:paddingTop="15dp">


  <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="298dp"
      android:layout_height="40dp"
      android:orientation="vertical"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

   <TextView
       android:id="@+id/date"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="15dp"
       android:paddingRight="15dp"
       android:text="Today, 15 Dec"
       android:textColor="@color/colorTransparent"
       android:textSize="15sp" />

   <TextView
       android:id="@+id/location"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="15dp"
       android:paddingRight="15dp"
       android:text="Egypt"
       android:textColor="@color/black"
       android:textSize="15sp"
       android:textStyle="bold" />


  </LinearLayout>

  <ImageView
      android:id="@+id/open_location_list"
      android:layout_width="40dp"
      android:layout_height="35dp"
      android:src="@drawable/pin"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.15"
      app:layout_constraintStart_toEndOf="@+id/linearLayout3"
      app:layout_constraintTop_toTopOf="parent" />

 </androidx.constraintlayout.widget.ConstraintLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="100dp"
     android:gravity="center_horizontal"
     android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:layout_marginTop="5dp"
      android:orientation="vertical">
   <ImageView
       android:id="@+id/imageView_condition_icon"
       android:layout_width="50dp"
       android:layout_height="40dp"
       android:layout_gravity="center_horizontal"
       android:src="@drawable/c"
       android:layout_marginLeft="70dp"
       />
   <TextView
       android:id="@+id/textView_temp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="15°"
       android:textSize="45sp"
       />
  </LinearLayout>
  <TextView
      android:id="@+id/textView_condition"
      android:layout_width="312dp"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="Cloudy"
      android:textColor="@color/colorTransparent"
      android:textStyle="bold"
      android:textSize="25sp" />
  <LinearLayout
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_marginTop="15dp"
      android:orientation="horizontal"
      android:weightSum="4">
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:weightSum="2"
       android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/wind" />
    <TextView
        android:id="@+id/textView_wind"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/dark_slate_gray"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="20"/>

   </LinearLayout>
   <TextView
       android:layout_width="1dp"
       android:layout_height="40dp"
       android:layout_gravity="center_vertical"
       android:background="@color/colorTransparent" />
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:weightSum="2"
       android:layout_weight="1"
       android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/humidity" />
    <TextView
        android:id="@+id/textView_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textColor="@color/dark_slate_gray"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="20"/>
   </LinearLayout>
   <TextView
       android:layout_width="1dp"
       android:layout_height="40dp"
       android:layout_gravity="center_vertical"
       android:background="@color/colorTransparent"
       />
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:weightSum="2"
       android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/pressure" />
    <TextView
        android:id="@+id/textView_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textColor="@color/dark_slate_gray"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="20"/>
   </LinearLayout>
   <TextView
       android:layout_width="1dp"
       android:layout_height="40dp"
       android:layout_gravity="center_vertical"
       android:background="@color/colorTransparent" />
   <LinearLayout
       android:layout_width="0dp"
       android:weightSum="2"
       android:layout_weight="1"
       android:layout_height="match_parent"
       android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/cloud" />
    <TextView
        android:id="@+id/textView_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textColor="@color/dark_slate_gray"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="20"/>
   </LinearLayout>


  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:id="@+id/recycler_view"/>
 </LinearLayout>

 <FrameLayout
     android:id="@+id/sheet"
     android:layout_width="match_parent"
     android:layout_height="545dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     android:background="@drawable/rounded"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="70dp">
  <ImageView
      android:layout_width="70dp"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_baseline_remove_24"
      android:scaleType="centerCrop"
      android:layout_gravity="center|top"
      />

  <androidx.recyclerview.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp"
      android:id="@+id/daily_recycler_view"/>


 </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>